deployments/kustomize/api/overlays/minikube/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web3-api
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: web3-api
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 200m
              memory: 256Mi
